--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
+  "engines": {
+    "node": "^12 || ^14 || ^16 || ^18"
+  },
   "browserslist": [
     "last 2 chrome version",
     "last 2 firefox version",
